<resources>
    <string name="app_name">CheckMovie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="uploading">uploading…</string>
    <string name="Login">Login</string>
    <string name="UpLoad">Upload</string>
    <string name="Account">Account</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="forgetPW">forgetPW</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="title">Title</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_images">Choose Images</string>
    <string name="back_to_home">Back to home</string>
    <string name="user">User</string>
    <string name="date">Date</string>
    <string name="info">Info</string>
    <string name="fraga">FragA</string>
    <string name="fragb">FragB</string>
    <string name="fragc">fragC</string>
    <string name="username">User Name</string>
    <string name="password_again">Password again</string>
    <string name="reply_message">Reply Message</string>
    <string name="reply">Reply</string>
    <string name="chuisubin"><u>chuisubin</u></string>
    <string name="title_activity_map_info">Map</string>
</resources>
