<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">

    <TextView
        android:id="@+id/signUp_textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/signUp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signUp_LinearLayout_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/signUp_textView_Title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20sp"
            android:padding="10dp"

            tools:ignore="RtlSymmetry">



            <EditText
                android:padding="10dp"

                android:id="@+id/signUp_editView_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxEms="8"
                android:hint="@string/username"/>
        </LinearLayout>


        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20sp">



            <EditText
                android:id="@+id/signUp_editView_email"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content"
                android:padding="10dp"

                />
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20sp">



            <EditText
                android:id="@+id/signUp_editView_password"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/signUp_editView_passwordAgain"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_again"
                android:inputType="textPassword" />
        </LinearLayout>


    </LinearLayout>


    <Button

        android:id="@+id/signUp_button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_LinearLayout_SignUp" />


</android.support.constraint.ConstraintLayout>