<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/firebaseUpload_editView_filename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/title"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
                android:maxLength="8" />

            <Button
                android:id="@+id/firebaseUpload_button_ChooseImages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_images"
                android:textAllCaps="false" />

        </LinearLayout>


        <ImageView

            android:id="@+id/firebaseUpload_imageView_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter" />

        <EditText

            android:id="@+id/fragB_edt_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="top|left"
            android:maxLines="3"
            android:maxEms="3"
            android:imeOptions="flagNoExtractUi"

            android:inputType="textMultiLine"
            />


        <Button
            android:id="@+id/firebaseUpload_button_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/UpLoad"
            android:textAllCaps="false" />
    </LinearLayout>



</ScrollView>
